<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd"
    android:orientation="vertical"
    tools:context=".signup">



    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginLeft="135dp"
        android:textColor="@color/black"

        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/UserInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/user"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/emailInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"/>




    <EditText
        android:id="@+id/passInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/pass"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"/>




    <EditText
        android:id="@+id/repassinp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/reenter"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp" />




    <EditText
        android:id="@+id/NumberInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/mobilenum"
        android:textSize="20dp"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"

        android:padding="15dp"

        android:drawablePadding="10dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/signup"
        android:padding="10dp"
        android:layout_margin="20dp"/>
</LinearLayout>